changes to the party name

--- a/index.html
+++ b/index.html
@@ -131,8 +131,13 @@
  		</div>
 
  	</section>
+ 	
+ 	
+		<br/>
+		<br/>
 
-	<section class="row">
+
+	<footer class="row">
 		<button type="button" class="btn btn-info" onclick="shuffle()">One more please</button>
 		<!-- <a class="btn btn-outline-inverse btn-lg" onclick="shuffle()">One more please</a> -->
 		<br/>
@@ -143,7 +148,7 @@
 
 		</ul>
 
-	</section>
+	</footer>
 
 
 
